--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-leetcode solutions
+manually uploaded leetcode solutions (~200 unuploaded solutions from before 11/29, might upload them at some point as well)
