--- a/README
+++ b/README
@@ -1,1 +1,2 @@
-manually uploaded leetcode solutions (~200 unuploaded solutions from before 11/29, might upload them at some point as well)
+leethub updated leetcode solutions (~200 unuploaded solutions from before 11/29, might upload them at some point as well)
+manually uploaded when leethub fails
